# web-scraper

./: .gitignore  pyproject.toml
tests/: test_scraper.py  test_web_scraper.py
web_scraper/: backup.py  scraper.py
